src/components/DashboardContainer/DashboardContainer.css
@import '@folio/stripes-components/lib/variables.css';

.dashboardContainer {
  background: var(--bg);
  border-right: 1px solid var(--color-border);
  height: 100%;
  max-height: calc(100vh - 44px);
  display: flex;
  flex-direction: column;
  top: 0;
  left: 0;
  width: 100%;

  /* transition: all .25s ease-in-out; */
  overflow: hidden;
  position: absolute;
  will-change: transform;
}

/**
 * Pane Content
 */
.dashboardContentBanner {
  height: 100%;
  outline: 0;
  padding: var(--gutter-static);
  position: relative
}
.dashboardContent {
  height: 100%;
  overflow-y: scroll;
  overflow: auto;
  outline: 0;
  padding: var(--gutter-static);
  position: relative
}

